# condense-proxy-demo

./: .gitignore  DEVELOPMENT.md  Dockerfile  LICENSE  Makefile  README.md  SCAFFOLD_PROMPT.md  condense.default.yaml  condense.docker.postgres.yaml  condense.dogfood.yaml  condense.gemini.yaml  condense.local.mock.compression.yaml  condense.local.mock.no_opt.yaml  condense.local.mock.semantic.70.yaml  condense.local.mock.semantic.80.yaml  condense.local.mock.semantic.90.yaml  condense.local.mock.semantic.yaml  condense.local.mock.semantic80_compression.yaml  condense.local.mock.semantic80_llmlingua.yaml  condense.local.no_opt.yaml  condense.local.yaml  docker-compose.minimal.yml  docker-compose.yml  pyproject.toml
benchmarks/: README.md  __init__.py  _orchestrate_two_readme_passes.py  build_heavy_token_dataset.py  build_production_like_profiles.py  compare_matrix_summary.py  compare_runs.py  convert_llm_benchmark_datasets.py  download_dataset.py  download_llm_benchmark_datasets.py  gemini_config.py  gemini_runner.py  recompute_report.py  run_condense_ab_test.py  run_gemini_profile_matrix.py  run_paired.py  run_paired_dolly_runtime.py  summarize_profile_matrix.py
condense/: __init__.py  __main__.py  cli.py
docs/: agentic-ide-integration-plan.md  architecture-and-integration-strategy.md  b2c-strategy-and-market-positioning.md  condense-vs-9router-comparison.md  dogfooding-journey.md  gap-analysis-action-items.md  prompt-caching-plan.md  rtk-tool-output-compression-plan.md
scripts/: ensure_local_postgres.sh  prepare_integration_docker.sh  stream_demo.py
(+159 files in other folders)
