[tool.poetry]
name = "condense"
version = "0.1.0"
description = "LLM cost optimization proxy — reduce API costs 50-80% through caching, routing, and budget enforcement"
authors = ["Condense Contributors"]
readme = "README.md"
packages = [{include = "condense"}]

[tool.poetry.scripts]
condense = "condense.cli:cli"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
httpx = "^0.28.0"
pyyaml = "^6.0"
pydantic = "^2.0"
click = "^8.1"
litellm = "*"
tiktoken = {version = "^0.8.0", optional = true}
watchfiles = "^1.0.0"
redis = {version = "^5.0", optional = true}

[tool.poetry.extras]
redis = ["redis"]
router = ["routellm"]
router-llmrouter = ["llmrouter-lib"]
compression = ["claw-compactor"]
compression-llmlingua = ["llmlingua"]
semantic-cache = ["sentence-transformers"]
semantic-cache-openai = ["openai"]
semantic-cache-qdrant = ["qdrant-client"]
all = ["redis", "routellm", "llmrouter-lib", "claw-compactor", "llmlingua", "sentence-transformers", "qdrant-client"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.24.0"
respx = "^0.22.0"
httpx = "^0.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "integration: marks tests that require local Docker/Ollama integration",
]
